api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-management-backend-svc
spec:
  type: LoadBalancer
  selector:
    app: task-management-backend
  ports:
    - protocol: "TCP"
      port: 8080 
      targetPort: 8080
