ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-management-frontend-svc
spec:
  type: LoadBalancer
  selector:
    app: task-management-frontend
  ports:
    - protocol: "TCP"
      port: 4200 
      targetPort: 4200
