ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx-example
  rules:
  - host: task.management.com
    http:
      paths:
      - path: /ui(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: task-management-frontend-svc
            port: 
              number: 4200
      - path: /api(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: task-management-backend-svc
            port: 
              number: 8080
